--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "framework": "astro",
   "installCommand": "cd web && npm install",
-  "buildCommand": "cd web && npm run sync:specs && astro build",
+  "buildCommand": "cd web && npm run build",
   "outputDirectory": "web/dist"
 }
