--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.7.0",
     "astro": "^5.17.1",
     "remark-gfm": "^4.0.1"
   }
