feat: add scripts for recipe image generation and Supabase integration
- Implemented `generate_recipe_images.mjs` to create and upload hero images for recipes using OpenRouter API.
- Added `load_recipes_to_supabase.mjs` for upserting recipes and meal plans from JSON to Supabase.
- Created `prepend_frontmatter.py` to add front matter to markdown files.
- Defined prompts for image generation in `recipe-image-system.txt` and `recipe-image-user.txt`.
- Established database schema for recipes and meal plans in `20250217_001_create_recipes.sql`.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 # Python virtual environment
 .venv/
 
+# Dependencies
+node_modules/
+
 # macOS
 .DS_Store
 
 # Environment variables
 .env
+.env.local
+.env*.local
