--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.7.0",
+    "@fontsource-variable/inter": "^5.2.8",
     "astro": "^5.17.1",
     "remark-gfm": "^4.0.1"
   }
