--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
   "homepage": "https://github.com/shfishburn/dogkit#readme",
   "dependencies": {
     "@supabase/supabase-js": "^2.96.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "@typescript-eslint/parser": "^8.56.0",
+    "eslint": "^10.0.0",
+    "eslint-plugin-astro": "^1.6.0"
   }
 }
