--- a/web/package.json
+++ b/web/package.json
@@ -17,14 +17,17 @@
   "dependencies": {
     "@astrojs/sitemap": "^3.7.0",
     "@fontsource-variable/inter": "^5.2.8",
+    "@nanostores/persistent": "^1.3.3",
     "astro": "^5.17.1",
-    "remark-gfm": "^4.0.1"
+    "nanostores": "^1.1.0",
+    "remark-gfm": "^4.0.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
     "@typescript-eslint/eslint-plugin": "^8.56.0",
     "@typescript-eslint/parser": "^8.56.0",
-    "eslint": "^10.0.0",
+    "eslint": "^9.39.2",
     "eslint-plugin-astro": "^1.6.0",
     "typescript": "^5.9.3"
   }
