--- a/web/package.json
+++ b/web/package.json
@@ -15,16 +15,23 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.7.0",
+    "@astrojs/vercel": "^9.0.4",
     "@fontsource-variable/inter": "^5.2.8",
     "@nanostores/persistent": "^1.3.3",
+    "@tanstack/react-query": "^5.90.21",
     "astro": "^5.17.1",
     "nanostores": "^1.1.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "remark-gfm": "^4.0.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.56.0",
     "@typescript-eslint/parser": "^8.56.0",
     "eslint": "^9.39.2",
